# libfreenect2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: freenect2-config.cmake
examples/: CMakeLists.txt
include/libfreenect2/: frame_listener.hpp  frame_listener_impl.h  libfreenect2.hpp  logger.h  packet_pipeline.h  registration.h
src/: allocator.cpp  allocator.h  data_callback.h  frame_listener_impl.cpp  libfreenect2.cpp  logging.cpp  logging.h  packet_pipeline.cpp  registration.cpp  resource.cpp  resource.h  threading.h
src/processors/: async_packet_processor.h  cpu_depth_packet_processor.cpp  depth_packet_processor.cpp  depth_packet_processor.h  depth_packet_stream_parser.cpp  depth_packet_stream_parser.h  packet_processor.h  rgb_packet_processor.cpp  rgb_packet_processor.h  rgb_packet_stream_parser.cpp  rgb_packet_stream_parser.h  tegra_jpeg_rgb_packet_processor.cpp  turbo_jpeg_rgb_packet_processor.cpp  vaapi_rgb_packet_processor.cpp  vt_rgb_packet_processor.cpp
src/processors/opencl/: opencl_depth_packet_processor.cpp  opencl_kde_depth_packet_processor.cpp
src/processors/tinythread/: tinythread.h
src/protocol/: command.h  command_transaction.cpp  command_transaction.h  response.h  usb_control.cpp  usb_control.h
src/tinythread/: tinythread.cpp
src/usb/: event_loop.cpp  event_loop.h  transfer_pool.cpp  transfer_pool.h
